unpackaged/objects/Incentive_Setupdp__c.object
<CustomObject>
    <fields>
        <fullName>Basis_of_Incentives__c</fullName>
        <label>Basis of Incentives</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No of Logins </fullName>
                </value>
                <value>
                    <fullName>Disbursal Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSA_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSA/Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Incentive_Setups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eligible_Role__c</fullName>
        <label>Eligible Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <label>Incentive %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipName>Incentive_Setups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Type_Applied__c</fullName>
        <label>Loan Type Applied</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Loan </fullName>
                </value>
                <value>
                    <fullName>Loan against Property </fullName>
                </value>
                <value>
                    <fullName>Industrial or Commercial Purchase </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Amount__c</fullName>
        <label>Maximum Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_File_Input__c</fullName>
        <label>Maximum File Input</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Amount__c</fullName>
        <label>Minimum Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_File_Input__c</fullName>
        <label>Minimum File Input</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DSA </fullName>
                </value>
                <value>
                    <fullName>Salesperson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incentive_Setups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WIRR_Higher_Limit__c</fullName>
        <label>WIRR Higher Limit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WIRR_Lower_Limit__c</fullName>
        <label>WIRR Lower Limit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Incentive Setupdp</label>
    <nameField>
        <displayFormat>IS-{0000}</displayFormat>
        <label>Incentive Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Setupdps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>